# artifacts/api-server/src/routes/index.ts
@@ -9,6 +9,7 @@ import visitItemsRouter from "./visitItems";
 import dailyReportsRouter from "./dailyReports";
 import productsRouter from "./products";
 import vetRouter from "./vet";
+import vaccinationsRouter from "./vaccinations";
 
 const router: IRouter = Router();
 
@@ -22,5 +23,6 @@ router.use("/visit-items", visitItemsRouter);
 router.use("/daily-reports", dailyReportsRouter);
 router.use("/products", productsRouter);
 router.use("/vet", vetRouter);
+router.use("/vaccinations", vaccinationsRouter);
 
 export default router;
